CostalCloud/force-app/main/default/objects/Merchandise__c/fields/API_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Type_Name__c</fullName>
    <label>API Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>