CostalCloud/force-app/main/default/objects/Merchandise__c/fields/Caption_Uninstallable_Product__c.field-meta.xml
<CustomField>
    <fullName>Caption_Uninstallable_Product__c</fullName>
    <label>Caption: Uninstallable Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>