CostalCloud/force-app/main/default/objects/Merchandise__c/fields/deliveryLocationIndicator__c.field-meta.xml
<CustomField>
    <fullName>deliveryLocationIndicator__c</fullName>
    <label>deliveryLocationIndicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>