CostalCloud/force-app/main/default/objects/Merchandise__c/fields/Expected_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Arrival_Date__c</fullName>
    <label>Expected Arrival Date</label>
    <type>Date</type>
</CustomField>