CostalCloud/force-app/main/default/objects/Merchandise__c/fields/Integration_Key_Product_Required__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key_Product_Required__c</fullName>
    <externalId>true</externalId>
    <label>Integration Key (Product Required)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>