CostalCloud/force-app/main/default/objects/Merchandise__c/fields/Merchandise_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Merchandise_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchandise ID (18)</label>
    <type>Text</type>
</CustomField>