CostalCloud/force-app/main/default/objects/Merchandise__c/fields/mvendorPartNumber__c.field-meta.xml
<CustomField>
    <fullName>mvendorPartNumber__c</fullName>
    <label>mvendorPartNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>