CostalCloud/force-app/main/default/objects/Merchandise__c/fields/Optional_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Optional_Item_Number__c</fullName>
    <label>Optional Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>