CostalCloud/force-app/main/default/objects/Merchandise__c/fields/Photo_Uninstallable_Product__c.field-meta.xml
<CustomField>
    <fullName>Photo_Uninstallable_Product__c</fullName>
    <label>Photo: Uninstallable Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>