CostalCloud/force-app/main/default/objects/Merchandise__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <formula>Work_Order__r.PO_Number__c</formula>
    <label>PO Number</label>
    <type>Text</type>
</CustomField>