CostalCloud/force-app/main/default/objects/Merchandise__c/fields/Product_Onsite_and_Installable__c.field-meta.xml
<CustomField>
    <fullName>Product_Onsite_and_Installable__c</fullName>
    <label>Product Onsite and Installable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>