CostalCloud/force-app/main/default/objects/Merchandise__c/fields/quoteLeadTime__c.field-meta.xml
<CustomField>
    <fullName>quoteLeadTime__c</fullName>
    <label>quoteLeadTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>