CostalCloud/force-app/main/default/objects/Merchandise__c/fields/Retail_Amount__c.field-meta.xml
<CustomField>
    <fullName>Retail_Amount__c</fullName>
    <label>Retail Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>