CostalCloud/force-app/main/default/objects/Merchandise__c/fields/SKU_Number__c.field-meta.xml
<CustomField>
    <fullName>SKU_Number__c</fullName>
    <formula>Product_Name__r.SKU_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU Number</label>
    <type>Text</type>
</CustomField>