CostalCloud/force-app/main/default/objects/Merchandise__c/fields/Store_No__c.field-meta.xml
<CustomField>
    <fullName>Store_No__c</fullName>
    <formula>Work_Order__r.Store_No__c</formula>
    <label>Store No</label>
    <type>Text</type>
</CustomField>