CostalCloud/force-app/main/default/objects/Merchandise__c/fields/svcTypeCode__c.field-meta.xml
<CustomField>
    <fullName>svcTypeCode__c</fullName>
    <label>svcTypeCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>