CostalCloud/force-app/main/default/objects/Merchandise__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field only used during go-live data migration</inlineHelpText>
    <label>Test</label>
    <type>Checkbox</type>
</CustomField>