CostalCloud/force-app/main/default/objects/Merchandise__c/fields/willCallTypeIndicator__c.field-meta.xml
<CustomField>
    <fullName>willCallTypeIndicator__c</fullName>
    <label>willCallTypeIndicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>