CostalCloud/force-app/main/default/objects/Merchandise__c/recordTypes/HD_Merchandise.recordType-meta.xml
<RecordType>
    <fullName>HD_Merchandise</fullName>
    <active>true</active>
    <label>HD Merchandise</label>
</RecordType>