CostalCloud/force-app/main/default/objects/Merchandise__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WO_Integration_Client_Type__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Integration_Key_Product_Required__c</columns>
    <columns>Store_No__c</columns>
    <columns>PO_Number__c</columns>
    <columns>Reference_Number__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>